# CEXY

./: README.md  cargo.toml
engine-core/: Cargo.toml
engine-core/src/: engine.rs  lib.rs  tests.rs
engine-core/src/orderbook/: mod.rs  orderbook.rs  price_levels.rs  types.rs
gateway/src/: main.rs
market-data/: Cargo.toml
market-data/src/: aggregator.rs  lib.rs  pipeline.rs  tests.rs  transformer.rs  types.rs
net/: Cargo.toml
net/src/: lib.rs  tests.rs
net/src/http/handlers/: orders.rs
net/src/http/models/: orders.rs
net/src/ws/: app.rs  client_manager.rs  lib.rs  mod.rs  types.rs
net/src/ws/broadcasters/: depth.rs  mod.rs  order_update.rs  ticker.rs  trade.rs
persistence/: Cargo.toml
protocol/: Cargo.toml
protocol/src/: lib.rs  tests.rs  types.rs
